--- a/pages/code/asdocs/all-index-U.html
+++ b/pages/code/asdocs/all-index-U.html
@@ -93,6 +93,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("UÂ
      Turn a hexlated String back into a ByteArray.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/LoaderUtil.html#unload()">unload</a>(loader) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/LoaderUtil.html">LoaderUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Safely unload the specified loader.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/MediaContainer.html#event:unload">unload</a> &mdash; Event in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/MediaContainer.html">MediaContainer</a></td>
 </tr>
 <tr>
