--- a/pages/code/asdocs/com/threerings/flash/class-list.html
+++ b/pages/code/asdocs/com/threerings/flash/class-list.html
@@ -79,6 +79,9 @@
 <td><a href="KeyRepeatLimiter.html">KeyRepeatLimiter</a></td>
 </tr>
 <tr>
+<td><a href="LoaderUtil.html">LoaderUtil</a></td>
+</tr>
+<tr>
 <td><a href="MathUtil.html">MathUtil</a></td>
 </tr>
 <tr>
