--- a/pages/code/asdocs/com/threerings/flash/package-detail.html
+++ b/pages/code/asdocs/com/threerings/flash/package-detail.html
@@ -119,43 +119,47 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
  (or blocking) the key repeat rate.</td>
 </tr>
 <tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="LoaderUtil.html">LoaderUtil</a></td><td class="summaryTableLastCol">
+ Contains a utility method for safely unloading a Loader.</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MathUtil.html">MathUtil</a></td><td class="summaryTableLastCol">
  Collection of math utility functions.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MediaContainer.html">MediaContainer</a></td><td class="summaryTableLastCol">
  A wrapper class for all media that will be placed on the screen.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MenuUtil.html">MenuUtil</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SimpleTextButton.html">SimpleTextButton</a></td><td class="summaryTableLastCol">
  Displays a simple button with a rounded rectangle or rectangle for a face.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Siner.html">Siner</a></td><td class="summaryTableLastCol">
  Tracks multiple sine waves with different periods and amplitudes, and
  returns an instantaneous additive amplitude.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SiningTextAnimation.html">SiningTextAnimation</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="TextCharAnimation.html">TextCharAnimation</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="TextFieldUtil.html">TextFieldUtil</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Vector2.html">Vector2</a></td><td class="summaryTableLastCol">
  Basic 2D vector implementation.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Vector3.html">Vector3</a></td><td class="summaryTableLastCol">
  Basic 3D vector implementation.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="VideoDisplayer.html">VideoDisplayer</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
