--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -46,6 +46,9 @@
 <td><a href="com/whirled/contrib/simplegame/AppMode.html">AppMode</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/probe/ArrayParameter.html">ArrayParameter</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/game/AttackCollisionHandler.html">AttackCollisionHandler</a></td>
 </tr>
 <tr>
@@ -118,6 +121,15 @@
 <td><a href="com/whirled/contrib/platformer/editor/BoundsDetail.html">BoundsDetail</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/probe/Button.html">Button</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ButtonEvent.html">ButtonEvent</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/CallbackParameter.html">CallbackParameter</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/card/Card.html">Card</a></td>
 </tr>
 <tr>
@@ -155,6 +167,18 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/display/ClickAnimateFurniture.html">ClickAnimateFurniture</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/client/ClientCutSceneController.html">ClientCutSceneController</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ClientPanel.html">ClientPanel</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/client/ClientPlatformerContext.html">ClientPlatformerContext</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/client/ClientPlatformerController.html">ClientPlatformerController</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/board/Collider.html">Collider</a></td>
@@ -206,6 +230,12 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/card/Debug.html">Debug</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/DecorationSprite.html">DecorationSprite</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/Definitions.html">Definitions</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/DelayUtil.html">DelayUtil</a></td>
@@ -295,6 +325,12 @@
 <td><a href="com/whirled/contrib/ForkingToyState.html">ForkingToyState</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/probe/FunctionPanel.html">FunctionPanel</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/FunctionSpec.html">FunctionSpec</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/simplegame/tasks/FunctionTask.html">FunctionTask</a></td>
 </tr>
 <tr>
@@ -314,6 +350,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/editor/GridLayer.html">GridLayer</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/GridPanel.html">GridPanel</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/card/Hand.html">Hand</a></td>
@@ -353,6 +392,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/Jukebox.html">Jukebox</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/piece/LaserShot.html">LaserShot</a></td>
@@ -424,6 +466,9 @@
 <td><a href="com/whirled/contrib/platformer/display/Metrics.html">Metrics</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/probe/MobSprite.html">MobSprite</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/editor/MultDynamicDetail.html">MultDynamicDetail</a></td>
 </tr>
 <tr>
@@ -454,6 +499,9 @@
 <td><a href="com/whirled/contrib/simplegame/ObjectMessage.html">ObjectMessage</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/probe/ObjectParameter.html">ObjectParameter</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/simplegame/util/ObjectSet.html">ObjectSet</a></td>
 </tr>
 <tr>
@@ -482,6 +530,12 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/tasks/ParallelTask.html">ParallelTask</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/Parameter.html">Parameter</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ParameterPanel.html">ParameterPanel</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/display/ParticleLayer.html">ParticleLayer</a></td>
@@ -529,10 +583,19 @@
 <td><a href="com/whirled/contrib/platformer/editor/PieceTree.html">PieceTree</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/PlatformerContext.html">PlatformerContext</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/PlatformerController.html">PlatformerController</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/card/graphics/PlayerSprite.html">PlayerSprite</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/tasks/PlaySoundTask.html">PlaySoundTask</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/PointParameter.html">PointParameter</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/PreferredCamera.html">PreferredCamera</a></td>
@@ -610,6 +673,21 @@
 <td><a href="com/whirled/contrib/simplegame/tasks/SerialTask.html">SerialTask</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/server/Server.html">Server</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/server/ServerController.html">ServerController</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ServerDefinitions.html">ServerDefinitions</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/ServerStub.html">ServerStub</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/game/SetGateEventAction.html">SetGateEventAction</a></td>
 </tr>
 <tr>
@@ -680,6 +758,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/card/Table.html">Table</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/probe/TabPanel.html">TabPanel</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/tasks/TaskContainer.html">TaskContainer</a></td>
@@ -761,6 +842,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/resource/XmlResource.html">XmlResource</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/ZipMultiLoader.html">ZipMultiLoader</a></td>
 </tr>
 </table>
 </body>
