--- a/pages/code/contrib/asdocs/all-index-D.html
+++ b/pages/code/contrib/asdocs/all-index-D.html
@@ -72,6 +72,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
      Returns the ObjectDB that this object is contained in.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#deactivate()">deactivate</a>() &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerStub.html#DEACTIVATE">DEACTIVATE</a> &mdash; Constant static property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerStub.html">ServerStub</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> Message sent to deacticate our module.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ShotSprite.html#_dead">_dead</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ShotSprite.html">ShotSprite</a></td>
 </tr>
 <tr>
@@ -235,6 +247,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td> The name of our deck.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/DecorationSprite.html">DecorationSprite</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/package-detail.html">com.whirled.contrib.avrg.probe</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ A test sprite for use as an AVRG mob decoration.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/DecorationSprite.html#DecorationSprite()">DecorationSprite</a>() &mdash; Constructor in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/DecorationSprite.html">DecorationSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Creates a new decoration.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/NetArray.html#_default">_default</a> &mdash; Property in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/NetArray.html">NetArray</a></td>
 </tr>
 <tr>
@@ -308,6 +334,32 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Jukebox.html#DEFAULT_VOLUME">DEFAULT_VOLUME</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Jukebox.html">Jukebox</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Definitions.html">Definitions</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/package-detail.html">com.whirled.contrib.avrg.probe</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Declares all of the code objects available in the AVRG client and server api.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Definitions.html#Definitions()">Definitions</a>(ctrl, makeDecoration) &mdash; Constructor in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Definitions.html">Definitions</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Creates new definitions.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ClientPanel.html#_defs">_defs</a> &mdash; Property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ClientPanel.html">ClientPanel</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#_defs">_defs</a> &mdash; Property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -777,13 +829,31 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_doubleTap">_doubleTap</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#DOUBLE_TAP">DOUBLE_TAP</a> &mdash; Constant static property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#DOUBLE_TAP">DOUBLE_TAP</a> &mdash; Constant static property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_downKeys">_downKeys</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_downKeys">_downKeys</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -821,6 +891,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerDefinitions.html#dump()">dump</a>() &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerDefinitions.html">ServerDefinitions</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Print out the RPC versions of all server functions suitable for pasting into client 
+     definitions.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#_duplicate">_duplicate</a> &mdash; Static property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
 </tr>
 <tr>
@@ -834,6 +912,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_dx">_dx</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_dx">_dx</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -858,6 +942,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_dy">_dy</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_dy">_dy</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
