--- a/pages/code/contrib/asdocs/all-index-E.html
+++ b/pages/code/contrib/asdocs/all-index-E.html
@@ -41,6 +41,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_ed">_ed</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html#_editCoords">_editCoords</a> &mdash; Property in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html">EditView</a></td>
 </tr>
 <tr>
@@ -260,7 +266,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html#EditView()">EditView</a>(pfac:<a href="com/whirled/contrib/platformer/piece/PieceFactory.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:PieceFactory</a>, dynamics, level, board:<a href="com/whirled/contrib/platformer/board/Board.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:Board</a>) &mdash; Constructor in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html">EditView</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html#EditView()">EditView</a>(dynamics, level) &mdash; Constructor in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditView.html">EditView</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
@@ -395,12 +401,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#ensureCentered()">ensureCentered</a>(rd:<a href="com/whirled/contrib/platformer/piece/RectDynamic.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:RectDynamic</a>) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/BoardEditSprite.html#ensureOnScreen()">ensureOnScreen</a>(sprite:<a href="com/whirled/contrib/platformer/editor/EditorSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor./class-list.html');">com.whirled.contrib.platformer.editor:EditorSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/BoardEditSprite.html">BoardEditSprite</a></td>
 </tr>
 <tr>
@@ -408,12 +408,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#ensureVisible()">ensureVisible</a>(actor:<a href="com/whirled/contrib/platformer/piece/Actor.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:Actor</a>, yshift) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#ensureVisible()">ensureVisible</a>(a:<a href="com/whirled/contrib/platformer/piece/Actor.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:Actor</a>) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -448,6 +442,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 </tr>
 <tr>
 <td width="20"></td><td> The unique identifier of this entity, or null if referring to the self.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ParameterPanel.html#_entries">_entries</a> &mdash; Property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ParameterPanel.html">ParameterPanel</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Definitions.html#enumEvents()">enumEvents</a>(functor) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Definitions.html">Definitions</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/LineData.html#EPSILON">EPSILON</a> &mdash; Constant property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/LineData.html">LineData</a></td>
