--- a/pages/code/contrib/asdocs/all-index-I.html
+++ b/pages/code/contrib/asdocs/all-index-I.html
@@ -262,6 +262,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#init()">init</a>(ed) &mdash; Method in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/Metrics.html#init()">init</a>(width, height, tile) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/Metrics.html">Metrics</a></td>
 </tr>
 <tr>
@@ -281,6 +287,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#initBounds()">initBounds</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#initClasses()">initClasses</a>(duplicate) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -358,6 +370,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#initZip()">initZip</a>(source, onReady, duplicate) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/BoundData.html#INNER">INNER</a> &mdash; Constant static property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/BoundData.html">BoundData</a></td>
 </tr>
 <tr>
@@ -418,6 +436,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td> Insert some new cards into a previously sorted array.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#insertMode()">insertMode</a>(mode:<a href="com/whirled/contrib/simplegame/AppMode.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame./class-list.html');">com.whirled.contrib.simplegame:AppMode</a>, index) &mdash; Method in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Inserts a mode into the stack at the specified index.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#instance">instance</a> &mdash; Static property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
 </tr>
 <tr>
@@ -466,7 +491,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#instantiateMovieClip()">instantiateMovieClip</a>(resourceName, className) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#instantiateMovieClip()">instantiateMovieClip</a>(resourceName, className, disableMouseInteraction) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -587,6 +612,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html#isAlpha()">isAlpha</a>(char) &mdash; Static method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html">Parameter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Tests if a character is alphabetic.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Card.html#isBetterRank()">isBetterRank</a>(rhs:<a href="com/whirled/contrib/card/Card.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/card./class-list.html');">com.whirled.contrib.card:Card</a>, ordering) &mdash; Method in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Card.html">Card</a></td>
 </tr>
 <tr>
@@ -619,13 +651,32 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
      Returns true if any part of the actor is inside the convex shape made by the two lines.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html#isDigit()">isDigit</a>(char) &mdash; Static method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html">Parameter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Tests if a character is a digit.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#isDoubleTap()">isDoubleTap</a>(keyCode) &mdash; Method in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#isDoubleTap()">isDoubleTap</a>(keyCode) &mdash; Method in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#isDown()">isDown</a>(keyCode) &mdash; Method in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#isDown()">isDown</a>(keyCode) &mdash; Method in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -848,6 +899,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 </tr>
 <tr>
 <td width="20"></td><td> Test if the local player is only watching (not playing) </td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html#isWhitespace()">isWhitespace</a>(char) &mdash; Static method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Parameter.html">Parameter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Tests if a character is whitespace.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html#ITEM_BACK">ITEM_BACK</a> &mdash; Constant static property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html">Board</a></td>
