--- a/pages/code/contrib/asdocs/all-index-U.html
+++ b/pages/code/contrib/asdocs/all-index-U.html
@@ -35,6 +35,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("UÂ
 <td colspan="2"><a name="U"></a><a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-A.html">A</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-B.html">B</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-C.html">C</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-D.html">D</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-E.html">E</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-F.html">F</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-G.html">G</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-H.html">H</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-I.html">I</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-J.html">J</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-K.html">K</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-L.html">L</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-M.html">M</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-N.html">N</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-O.html">O</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-P.html">P</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-Q.html">Q</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-R.html">R</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-S.html">S</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-T.html">T</a>&nbsp;&nbsp;<font style="bold" size="10px" color="black">U</font>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-V.html">V</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-W.html">W</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-X.html">X</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-Y.html">Y</a>&nbsp;&nbsp;<a onclick="javascript:loadClassListFrame('index-list.html');" href="all-index-Z.html">Z</a>&nbsp;&nbsp;</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ArrayParameter.html#_underlying">_underlying</a> &mdash; Property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ArrayParameter.html">ArrayParameter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ObjectParameter.html#_underlying">_underlying</a> &mdash; Property in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ObjectParameter.html">ObjectParameter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/HandSprite.html#unfloatCard()">unfloatCard</a>() &mdash; Method in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/HandSprite.html">HandSprite</a></td>
 </tr>
 <tr>
@@ -152,6 +164,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("UÂ
 <tr>
 <td width="20"></td><td>
      Removes the specified listener from the specified dispatcher for the specified event.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#unwatchPlayer()">unwatchPlayer</a>(playerId) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#unwatchRoom()">unwatchRoom</a>(roomId) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#unwindToMode()">unwindToMode</a>(mode:<a href="com/whirled/contrib/simplegame/AppMode.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame./class-list.html');">com.whirled.contrib.simplegame:AppMode</a>) &mdash; Method in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
@@ -470,6 +494,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("UÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#updateACS()">updateACS</a>(event) &mdash; Method in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#updateActors()">updateActors</a>(delta) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
 </tr>
 <tr>
@@ -549,6 +579,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("UÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditSprite.html#updateDisplay()">updateDisplay</a>() &mdash; Method in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/EditSprite.html">EditSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#updateDisplay()">updateDisplay</a>(delta) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
