--- a/pages/code/contrib/asdocs/all-index-W.html
+++ b/pages/code/contrib/asdocs/all-index-W.html
@@ -119,6 +119,24 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("WÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_wasRead">_wasRead</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#watchPlayer()">watchPlayer</a>(playerId) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html#watchRoom()">watchRoom</a>(roomId) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/ServerModule.html">ServerModule</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html#_width">_width</a> &mdash; Property in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html">CardSprite</a></td>
 </tr>
 <tr>
