--- a/pages/code/contrib/asdocs/all-index-Z.html
+++ b/pages/code/contrib/asdocs/all-index-Z.html
@@ -41,6 +41,19 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("ZÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/ZipMultiLoader.html">ZipMultiLoader</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/package-detail.html">com.whirled.contrib</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Utility class for MultiLoading all the files contained in a zip.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/ZipMultiLoader.html#ZipMultiLoader()">ZipMultiLoader</a>(source, completeCallback, appDom) &mdash; Constructor in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/ZipMultiLoader.html">ZipMultiLoader</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td style="padding-bottom:20px" colspan="2"></td>
 </tr>
 <tr>
