--- a/pages/code/contrib/asdocs/com/whirled/contrib/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/class-list.html
@@ -87,6 +87,9 @@
 <tr>
 <td><a href="UserCookie.html">UserCookie</a></td>
 </tr>
+<tr>
+<td><a href="ZipMultiLoader.html">ZipMultiLoader</a></td>
+</tr>
 </table>
 </body>
 </html>
