--- a/pages/code/contrib/asdocs/com/whirled/contrib/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/package-detail.html
@@ -135,6 +135,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="UserCookie.html">UserCookie</a></td><td class="summaryTableLastCol">
  <p>A class to manage complicated user cookies on a GameControl.</td>
 </tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ZipMultiLoader.html">ZipMultiLoader</a></td><td class="summaryTableLastCol">
+ Utility class for MultiLoading all the files contained in a zip.</td>
+</tr>
 </table>
 <p></p>
 <div>
