--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/class-list.html
@@ -18,6 +18,12 @@
 <tr>
 <td><a href="Controller.html">Controller</a></td>
 </tr>
+<tr>
+<td><a href="PlatformerContext.html">PlatformerContext</a></td>
+</tr>
+<tr>
+<td><a href="PlatformerController.html">PlatformerController</a></td>
+</tr>
 </table>
 </body>
 </html>
