--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/CutSceneController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/CutSceneController.html
@@ -43,6 +43,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr>
 <td class="classHeaderTableLabel">Implements</td><td><a href="PauseController.html">PauseController</a></td>
 </tr>
+<tr>
+<td class="classHeaderTableLabel">Subclasses</td><td><a href="../client/ClientCutSceneController.html">ClientCutSceneController</a></td>
+</tr>
 </table>
 <p></p>
 <p></p>
