--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/package-detail.html
@@ -41,6 +41,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Controller.html">Controller</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
+<tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="PlatformerContext.html">PlatformerContext</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="PlatformerController.html">PlatformerController</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
 </table>
 <p></p>
 <div>
