--- a/pages/code/contrib/asdocs/package-list.html
+++ b/pages/code/contrib/asdocs/package-list.html
@@ -24,6 +24,11 @@
 </td>
 </tr>
 <tr>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/package-detail.html">com.whirled.contrib.avrg.probe</a>
+<br>
+</td>
+</tr>
+<tr>
 <td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/package-detail.html">com.whirled.contrib.card</a>
 <br>
 </td>
@@ -54,6 +59,11 @@
 </td>
 </tr>
 <tr>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/package-detail.html">com.whirled.contrib.platformer.client</a>
+<br>
+</td>
+</tr>
+<tr>
 <td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/package-detail.html">com.whirled.contrib.platformer.display</a>
 <br>
 </td>
@@ -80,6 +90,11 @@
 </tr>
 <tr>
 <td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/package-detail.html">com.whirled.contrib.platformer.piece</a>
+<br>
+</td>
+</tr>
+<tr>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/server/class-list.html');" href="com/whirled/contrib/platformer/server/package-detail.html">com.whirled.contrib.platformer.server</a>
 <br>
 </td>
 </tr>
