--- a/pages/code/asdocs/all-classes.html
+++ b/pages/code/asdocs/all-classes.html
@@ -229,10 +229,13 @@
 <td><a href="com/threerings/util/LineSegment.html">LineSegment</a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/avrg/LocalSubControl.html">LocalSubControl</a></td>
+<td><a href="com/threerings/flash/LoaderUtil.html">LoaderUtil</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/game/LocalSubControl.html">LocalSubControl</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/LocalSubControl.html">LocalSubControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/Log.html">Log</a></td>
