--- a/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlerManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlerManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="EventHandlerManager,com.whirled.contrib.EventHandlerManager,_eventHandlers,freeAllHandlers,registerEventListener,registerOneShotCallback,registerUnload,unregisterEventListener" name="keywords">
+<meta content="EventHandlerManager,com.whirled.contrib.EventHandlerManager,_eventHandlers,conditionalCall,freeAllHandlers,registerEventListener,registerOneShotCallback,registerUnload,unregisterEventListener" name="keywords">
 <title>com.whirled.contrib.EventHandlerManager</title>
 </head>
 <body>
@@ -69,6 +69,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#conditionalCall()">conditionalCall</a>(callback:Function, callNow:Boolean, dispatcher:IEventDispatcher, event:String, useCapture:Boolean = false, priority:int = 0):void</div>
+<div class="summaryTableDescription"> 
+     Will either call a given function now, or defer it based on the boolean parameter.</div>
+</td><td class="summaryTableOwnerCol">EventHandlerManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#freeAllHandlers()">freeAllHandlers</a>(... ignored):void</div>
 <div class="summaryTableDescription">
      Free all handlers that have been added via this registerEventListener() and have not been
@@ -129,10 +137,57 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
+<a name="conditionalCall()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">conditionalCall</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function conditionalCall(callback:Function, callNow:Boolean, dispatcher:IEventDispatcher, event:String, useCapture:Boolean = false, priority:int = 0):void</code><p> 
+     Will either call a given function now, or defer it based on the boolean parameter.  If the 
+     parameter is false, the function will be registered as a one-shot callback on the dispatcher
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">callback</span>:Function</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">callNow</span>:Boolean</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">dispatcher</span>:IEventDispatcher</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">event</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">useCapture</span>:Boolean</code> (default = <code>false</code>)<code></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">priority</span>:int</code> (default = <code>0</code>)<code></code></td>
+</tr>
+</table>
+</div>
 <a name="freeAllHandlers()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">freeAllHandlers</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">freeAllHandlers</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
