--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="PieceSpriteFactory,com.whirled.contrib.platformer.display.PieceSpriteFactory,_contentDomain,_defaultDynamicSprite,_defaultPieceSprite,_duplicate,_instanceMap,_spriteMap,addDynamicClass,addPieceClass,blockShape,getDynamicSprite,getPieceSprite,init,instantiateClip,instantiateDClip,instantiatePClip" name="keywords">
+<meta content="PieceSpriteFactory,com.whirled.contrib.platformer.display.PieceSpriteFactory,_contentDomain,_defaultDynamicSprite,_defaultPieceSprite,_duplicate,_instanceMap,_spriteMap,addDynamicClass,addPieceClass,blockShape,getDynamicSprite,getPieceSprite,init,initClasses,initZip,instantiateClip,instantiateDClip,instantiatePClip" name="keywords">
 <title>com.whirled.contrib.platformer.display.PieceSpriteFactory</title>
 </head>
 <body>
@@ -125,6 +125,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#init()">init</a>(sources:Array, onReady:Function, duplicate:Boolean = true):void</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#initClasses()">initClasses</a>(duplicate:Boolean):void</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#initZip()">initZip</a>(source:Object, onReady:Function, duplicate:Boolean = true):void</div>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
 </tr>
@@ -352,6 +366,46 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">sources</span>:Array</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">onReady</span>:Function</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">duplicate</span>:Boolean</code> (default = <code>true</code>)<code></code></td>
+</tr>
+</table>
+</div>
+<a name="initClasses()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">initClasses</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function initClasses(duplicate:Boolean):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">duplicate</span>:Boolean</code></td>
+</tr>
+</table>
+</div>
+<a name="initZip()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">initZip</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function initZip(source:Object, onReady:Function, duplicate:Boolean = true):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">source</span>:Object</code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
