--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/editor/LevelEditor.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/editor/LevelEditor.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="LevelEditor,com.whirled.contrib.platformer.editor.LevelEditor,_board,_codeArea,_dynamicsLoaded,_dynamicsLoader,_editView,_factoryInitialized,_levelEdit,_levelLoaded,_levelLoader,_pfClass,_piecesLoaded,_piecesLoader,_xmlCode,addEditView,createChildren,pieceFactoryInitialized,setBoard,setPieceFactoryClass,setXmlPaths,tabChanged" name="keywords">
+<meta content="LevelEditor,com.whirled.contrib.platformer.editor.LevelEditor,_codeArea,_dynamicsLoaded,_dynamicsLoader,_editView,_factoryInitialized,_levelEdit,_levelLoaded,_levelLoader,_pfClass,_piecesLoaded,_piecesLoader,_xmlCode,addEditView,createChildren,pieceFactoryInitialized,setPieceFactoryClass,setXmlPaths,tabChanged" name="keywords">
 <title>com.whirled.contrib.platformer.editor.LevelEditor</title>
 </head>
 <body>
@@ -54,11 +54,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableProtectedProperty" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_board">_board</a> : <a href="../board/Board.html">Board</a>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">LevelEditor</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_codeArea">_codeArea</a> : TextArea<div class="summaryTableDescription"></div>
@@ -138,14 +133,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#setBoard()">setBoard</a>(board:<a href="../board/Board.html">Board</a>):void</div>
-<div class="summaryTableDescription">
-     Set the board to be used in the level editor.</div>
-</td><td class="summaryTableOwnerCol">LevelEditor</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
 <a class="signatureLink" href="#setPieceFactoryClass()">setPieceFactoryClass</a>(pfClass:Class):void</div>
 <div class="summaryTableDescription">
      Set the PieceFactory class to be used in the level editor.</div>
@@ -198,19 +185,10 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
-<a name="_board"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">_board</td><td class="detailHeaderType">property</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>protected var _board:<a href="../board/Board.html">Board</a></code>
-</div>
 <a name="_codeArea"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_codeArea</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">_codeArea</td><td class="detailHeaderType">property</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -356,22 +334,6 @@ showHideInherited();
 <code>public function pieceFactoryInitialized():void</code><p>
      Called externally when PieceSpriteFactory is initialized
      </p></div>
-<a name="setBoard()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">setBoard</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public function setBoard(board:<a href="../board/Board.html">Board</a>):void</code><p>
-     Set the board to be used in the level editor.
-     </p><span class="label">Parameters</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code><span class="label">board</span>:<a href="../board/Board.html">Board</a></code></td>
-</tr>
-</table>
-</div>
 <a name="setPieceFactoryClass()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
