--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/AppMode.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/AppMode.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="AppMode,com.whirled.contrib.simplegame.AppMode,_hasSetup,_modeSprite,modeSprite,destroy,destroyInternal,enter,enterInternal,exit,exitInternal,onKeyDown,onKeyUp,setup,setupInternal" name="keywords">
+<meta content="AppMode,com.whirled.contrib.simplegame.AppMode,_modeSprite,modeSprite,destroy,destroyInternal,enter,enterInternal,exit,exitInternal,onKeyDown,onKeyUp,setup,setupInternal" name="keywords">
 <title>com.whirled.contrib.simplegame.AppMode</title>
 </head>
 <body>
@@ -60,10 +60,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableProperty" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_hasSetup">_hasSetup</a> : Boolean<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">AppMode</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#modeSprite">modeSprite</a> : Sprite<div class="summaryTableDescription">[read-only]</div>
@@ -382,19 +378,10 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
-<a name="_hasSetup"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">_hasSetup</td><td class="detailHeaderType">property</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public var _hasSetup:Boolean</code>
-</div>
 <a name="_modeSprite"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_modeSprite</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+<td class="detailHeaderName">_modeSprite</td><td class="detailHeaderType">property</td>
 </tr>
 </table>
 <div class="detailBody">
