--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/MainLoop.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/MainLoop.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="MainLoop,com.whirled.contrib.simplegame.MainLoop,TRANSITION_CHANGE,TRANSITION_INSERT,TRANSITION_POP,TRANSITION_PUSH,TRANSITION_UNWIND,_fps,_hasSetup,_hostSprite,_keyDispatcher,_lastTime,_modeStack,_pendingModeTransitionQueue,_running,_updatables,g_instance,elapsedSeconds,fps,instance,topMode,addUpdatable,changeMode,createModeTransition,handleModeTransitions,onKeyDown,onKeyUp,popAllModes,popMode,pushMode,removeUpdatable,reset,run,setup,shutdown,stop,unwindToMode,update" name="keywords">
+<meta content="MainLoop,com.whirled.contrib.simplegame.MainLoop,TRANSITION_CHANGE,TRANSITION_INSERT,TRANSITION_PUSH,TRANSITION_REMOVE,TRANSITION_UNWIND,_fps,_hasSetup,_hostSprite,_keyDispatcher,_lastTime,_modeStack,_pendingModeTransitionQueue,_running,_updatables,g_instance,elapsedSeconds,fps,instance,topMode,addUpdatable,changeMode,createModeTransition,handleModeTransitions,insertMode,onKeyDown,onKeyUp,popAllModes,popMode,pushMode,removeMode,removeUpdatable,reset,run,setup,shutdown,stop,unwindToMode,update" name="keywords">
 <title>com.whirled.contrib.simplegame.MainLoop</title>
 </head>
 <body>
@@ -150,8 +150,16 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="#changeMode()">changeMode</a>(mode:<a href="AppMode.html">AppMode</a>):void</div>
 <div class="summaryTableDescription">
-     Pops the top mode from the stack, and pushes
+     Pops the top mode from the stack, if the modestack is not empty, and pushes
      a new mode in its place.</div>
+</td><td class="summaryTableOwnerCol">MainLoop</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#insertMode()">insertMode</a>(mode:<a href="AppMode.html">AppMode</a>, index:int):void</div>
+<div class="summaryTableDescription">
+     Inserts a mode into the stack at the specified index.</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
@@ -159,7 +167,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="#popAllModes()">popAllModes</a>():void</div>
 <div class="summaryTableDescription">
-     Inserts a mode into the stack at the given index.</div>
+     Pops all modes from the mode stack.</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
@@ -176,6 +184,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a class="signatureLink" href="#pushMode()">pushMode</a>(mode:<a href="AppMode.html">AppMode</a>):void</div>
 <div class="summaryTableDescription">
      Pushes a mode to the mode stack.</div>
+</td><td class="summaryTableOwnerCol">MainLoop</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#removeMode()">removeMode</a>(index:int):void</div>
+<div class="summaryTableDescription">
+     Removes a mode from the stack at the specified index.</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
@@ -287,15 +303,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Constant</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_CHANGE">TRANSITION_CHANGE</a> : int = 2<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_CHANGE">TRANSITION_CHANGE</a> : int = 4<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_INSERT">TRANSITION_INSERT</a> : int = 4<div class="summaryTableDescription">[static]</div>
-</td><td class="summaryTableOwnerCol">MainLoop</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_POP">TRANSITION_POP</a> : int = 1<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_INSERT">TRANSITION_INSERT</a> : int = 2<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
@@ -303,7 +315,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_UNWIND">TRANSITION_UNWIND</a> : int = 3<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_REMOVE">TRANSITION_REMOVE</a> : int = 3<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">MainLoop</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TRANSITION_UNWIND">TRANSITION_UNWIND</a> : int = 1<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 </table>
@@ -505,7 +521,7 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function changeMode(mode:<a href="AppMode.html">AppMode</a>):void</code><p>
-     Pops the top mode from the stack, and pushes
+     Pops the top mode from the stack, if the modestack is not empty, and pushes
      a new mode in its place.
      (Mode changes take effect between game updates.)
      </p><span class="label">Parameters</span>
@@ -550,6 +566,34 @@ showHideInherited();
 <div class="detailBody">
 <code>protected function handleModeTransitions():void</code>
 </div>
+<a name="insertMode()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">insertMode</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function insertMode(mode:<a href="AppMode.html">AppMode</a>, index:int):void</code><p>
+     Inserts a mode into the stack at the specified index. All modes
+     at and above the specified index will move up in the stack.
+     (Mode changes take effect between game updates.)
+          </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">mode</span>:<a href="AppMode.html">AppMode</a></code> &mdash; the AppMode to add
+     </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">index</span>:int</code> &mdash; the stack position to add the mode at.
+     You can use a negative integer to specify a position relative
+     to the top of the stack (for example, -1 is the top of the stack).
+     </td>
+</tr>
+</table>
+</div>
 <a name="onKeyDown()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -586,9 +630,9 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function popAllModes():void</code><p>
-     Inserts a mode into the stack at the given index.
-     (Mode changes take effect between game updates.)
-          </p></div>
+     Pops all modes from the mode stack.
+     Mode changes take effect before game updates.
+     </p></div>
 <a name="popMode()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -614,6 +658,27 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">mode</span>:<a href="AppMode.html">AppMode</a></code></td>
+</tr>
+</table>
+</div>
+<a name="removeMode()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">removeMode</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function removeMode(index:int):void</code><p>
+     Removes a mode from the stack at the specified index. All
+     modes above the specified index will move down in the stack.
+     (Mode changes take effect between game updates.)
+          </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">index</span>:int</code> &mdash; the stack position to add the mode at.
+     You can use a negative integer to specify a position relative
+     to the top of the stack (for example, -1 is the top of the stack).
+     </td>
 </tr>
 </table>
 </div>
@@ -737,7 +802,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const TRANSITION_CHANGE:int = 2</code>
+<code>public static const TRANSITION_CHANGE:int = 4</code>
 </div>
 <a name="TRANSITION_INSERT"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -746,16 +811,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const TRANSITION_INSERT:int = 4</code>
-</div>
-<a name="TRANSITION_POP"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">TRANSITION_POP</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public static const TRANSITION_POP:int = 1</code>
+<code>public static const TRANSITION_INSERT:int = 2</code>
 </div>
 <a name="TRANSITION_PUSH"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -766,6 +822,15 @@ showHideInherited();
 <div class="detailBody">
 <code>public static const TRANSITION_PUSH:int = 0</code>
 </div>
+<a name="TRANSITION_REMOVE"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">TRANSITION_REMOVE</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const TRANSITION_REMOVE:int = 3</code>
+</div>
 <a name="TRANSITION_UNWIND"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -773,7 +838,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const TRANSITION_UNWIND:int = 3</code>
+<code>public static const TRANSITION_UNWIND:int = 1</code>
 </div>
 <br>
 <br>
